--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
+
+#Jack specific files
+
+TASK.md
+Patch Digital - Junior Web Developer - Technical Task.pdf
+TODO.md
+
+
+
+
+
 # dependencies
 /node_modules
 /.pnp
